fixed typo in section 6 header

--- a/notebook/notebook.tex
+++ b/notebook/notebook.tex
@@ -278,7 +278,7 @@ This section of the notebook will detail the Algorithms that we are using for ro
 
 
 \pagebreak
-\section{Basics of Optometry}
+\section{Basics of Odometry}
 \subsection{What is Odometry}
     Odometry allows the robot to keep track of where it is on the field. In this imperfection, the robot keeps track of where it is relative to it's starting position. Odometry works by tracking the rotation of specific wheels and the heading of the robot.
     %should add odom wheel image here later :)
